profile and feed unit tests